--- a/source/less/blocks/device.less
+++ b/source/less/blocks/device.less
@@ -42,21 +42,28 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
+  width: 250px;
 }
 
 @media (min-width: @tablet-width) {
   .device {
-    margin: 46px auto 36px;
+    margin: 46px auto 37px;
   }
 
   .device__download-description {
     font-size: 18px;
     line-height: 24px;
+    width: 300px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .device {
-    margin: 52px auto 53px;
+    margin: 69px auto 53px;
+  }
+
+  .device__download-description {
+    font-size: 18px;
+    line-height: 24px;
   }
 }
