--- a/source/less/blocks/packages.less
+++ b/source/less/blocks/packages.less
@@ -9,7 +9,7 @@
   border-right: 2px solid #e5e5e5;
   color: #ffffff;
   margin: 0;
-  padding: 20px 85px;
+  padding: 18px 86px;
   position: relative;
 
   &--hit::before {
@@ -24,10 +24,11 @@
 
   &--hit::after {
     content: "ХИТ";
+    font-weight: normal;
     height: 73px;
-    left: 9px;
+    left: 4px;
     position: absolute;
-    top: 5px;
+    top: 7px;
     transform: rotate(-45deg);
     width: 74px;
   }
@@ -74,7 +75,7 @@
   font-weight: normal;
   line-height: 30px;
   margin: 0;
-  padding: 14px 21px;
+  padding: 14px 23px;
   position: relative;
   text-transform: uppercase;
   width: 276px;
