--- a/source/less/blocks/section-header.less
+++ b/source/less/blocks/section-header.less
@@ -10,6 +10,7 @@
   margin: 27px auto;
   padding: 0;
   text-align: center;
+  width: 225px;
 }
 
 @media (min-width: @tablet-width) {
@@ -17,9 +18,10 @@
     font-size: 40px;
     line-height: 48px;
     margin: 0 auto;
+    width: 590px;
 
     &--narrow {
-      padding: 0 20px;
+      width: 350px;
     }
   }
 }
@@ -29,9 +31,10 @@
     font-size: 50px;
     line-height: 60px;
     margin: 0 auto;
+    width: 750px;
 
     &--narrow {
-      padding: 0 226px;
+      width: 700px;
     }
   }
 }
