--- a/source/less/global.less
+++ b/source/less/global.less
@@ -2,7 +2,7 @@ body {
   background-color: white;
   color: #283645;
   font-family: "Open Sans", "Arial", sans-serif;
+  min-width: 320px;
   margin: 0;
   padding: 0;
-  width: 100%;
 }
