--- a/source/less/blocks/contacts-list.less
+++ b/source/less/blocks/contacts-list.less
@@ -5,11 +5,13 @@
   justify-content: center;
   list-style: none;
   margin: 0 auto;
+  margin-top: 33px;
   padding: 0;
 }
 
 .contacts-list__item {
-  margin: 9px 0;
+  margin: 0;
+  margin-bottom: 20px;
   padding: 0;
 }
 
@@ -29,21 +31,21 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
+}
 
-  &--link {
-    color: #d22856;
+.contacts-list__link {
+  color: #d22856;
+  text-decoration: none;
+
+  &:hover {
+    color: #283645;
+    text-decoration: underline;
+  }
+
+  &:active {
+    color: #283645;
+    opacity: 0.3;
     text-decoration: none;
-
-    &:hover {
-      color: #283645;
-      text-decoration: underline;
-    }
-
-    &:active {
-      color: #283645;
-      opacity: 0.3;
-      text-decoration: none;
-    }
   }
 }
 
@@ -53,6 +55,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 0;
   }
 
   .contacts-list__item {
