--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,7 +1,7 @@
 .contacts {
   background-color: #ffffff;
   margin: 0;
-  padding: 15px 20px;
+  padding: 12px 20px;
 }
 
 .contacts__question {
@@ -12,6 +12,7 @@
 @media (min-width: @tablet-width) {
   .contacts {
     padding-bottom: 0;
+    padding-top: 14px;
   }
 
   .contacts__question {
