--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -3,7 +3,7 @@
   color: #283645;
   margin: 0;
   overflow: hidden;
-  padding: 60px 30px 310px;
+  padding: 60px 0 310px;
   position: relative;
 }
 
@@ -13,8 +13,9 @@
   flex-direction: column;
   justify-content: flex-start;
   list-style: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  width: 265px;
 }
 
 .features__item {
@@ -87,6 +88,7 @@
   .features__title {
     margin: 12px 0;
     text-align: left;
+    width: 295px;
   }
 
   .features__description {
@@ -105,7 +107,8 @@
 
 @media (min-width: @desktop-width) {
   .features {
-    padding: 0 134px 30px;
+    padding: 0;
+    padding-bottom: 30px;
   }
 
   .features__list {
@@ -113,8 +116,9 @@
     flex-direction: row;
     float: none;
     justify-content: space-between;
+    margin: 0 auto;
     margin-top: -12px;
-    width: auto;
+    width: 932px;
   }
 
   .features__item {
