--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,15 +1,20 @@
 .page-footer {
-  align-items: center;
   background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   margin: 0;
-  padding: 40px 59px;
+  padding: 40px 0;
 
   &--mobile-hidden {
     display: none;
   }
+}
+
+.page-footer__wrapper {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 202px;
 }
 
 .page-footer__logo {
@@ -78,12 +83,16 @@
 
 @media (min-width: @tablet-width) {
   .page-footer {
-    flex-direction: row;
-    padding: 35px 13px;
+    padding: 35px 0;
 
     &--mobile-hidden {
-      display: flex;
+      display: block;
     }
+  }
+
+  .page-footer__wrapper {
+    flex-direction: row;
+    width: 635px;
   }
 
   .page-footer__logo {
@@ -92,12 +101,17 @@
 
   .page-footer__credits {
     margin: 0;
+    margin-top: 13px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-footer {
-    padding: 72px 123px;
+    padding: 72px 0;
+  }
+
+  .page-footer__wrapper {
+    width: 955px;
   }
 
   .page-footer__credits {
