--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -4,9 +4,9 @@
 }
 
 .review__wrapper {
-  margin: 0;
+  margin: 37px auto 25px;
   overflow: hidden;
-  padding: 37px 0 25px;
+  padding: 0;
 }
 
 .review__list {
@@ -19,9 +19,12 @@
 }
 
 .review__item {
-  margin: 0;
-  padding: 0 25px;
-  width: 320px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.review__user {
+  width: 270px;
 }
 
 .review__name {
@@ -45,15 +48,17 @@
   margin: 13px auto;
   padding: 0;
   text-align: center;
+  width: 270px;
 }
 
 .review__toggles {
-  margin: 20px 0;
+  margin: 20px auto;
   padding: 0;
 }
 
 @media (min-width: @tablet-width) {
   .review__wrapper {
+    margin: 0 auto;
     padding: 25px 0 20px;
   }
 
@@ -62,12 +67,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 620px;
+    width: 660px;
   }
 
   .review__user {
     margin-top: 22px;
     order: 1;
+    width: 370px
   }
 
   .review__name {
@@ -77,20 +83,22 @@
   }
 
   .review__information {
-    display: inline-block;
+    display: block;
     font-size: 14px;
     font-weight: normal;
     line-height: 30px;
     margin: 2px auto;
+    text-align: center;
   }
 
   .review__description {
     font-size: 18px;
     line-height: 30px;
+    width: 610px;
   }
 
   .review__toggles {
-    margin: 33px 0 1px;
+    margin: 33px auto 1px;
   }
 }
 
@@ -116,8 +124,13 @@
     padding-bottom: 0;
   }
 
+
   .review__item {
-    width: 665px;
+    width: 700px;
+  }
+
+  .review__description {
+    width: 690px;
   }
 
   .review__user {
