--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -4,17 +4,13 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 30px;
-  margin: 45px auto;
+  margin: 0 auto;
   padding: 0;
   text-align: center;
-  width: 280px;
+  width: 240px;
 
   &--form-top {
-    margin-bottom: 0;
-  }
-
-  &--photo-middle {
-    margin: 42px 20px;
+    width: 275px;
   }
 }
 
@@ -26,13 +22,9 @@
   .description {
     font-size: 18px;
     line-height: 30px;
-    margin: 92px auto 20px;
+    margin: 0 auto;
     padding: 0;
     width: 542px;
-
-    &--photo-middle {
-      margin: 56px auto 70px;
-    }
   }
 
   .description__line {
@@ -45,12 +37,8 @@
     width: 778px;
 
     &--narrow {
-      margin: 91px auto 89px;
+      margin: 0 auto;
       width: 602px;
-    }
-
-    &--photo-middle {
-      margin: 17px auto 65px;
     }
   }
 }
