--- a/source/less/blocks/section-header.less
+++ b/source/less/blocks/section-header.less
@@ -7,10 +7,15 @@
   font-size: 24px;
   font-weight: lighter;
   line-height: 30px;
-  margin: 27px auto;
+  margin: 0 auto;
+  margin-bottom: 27px;
   padding: 0;
   text-align: center;
   width: 225px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 @media (min-width: @tablet-width) {
