--- a/source/less/blocks/contacts-list.less
+++ b/source/less/blocks/contacts-list.less
@@ -5,13 +5,14 @@
   justify-content: center;
   list-style: none;
   margin: 0 auto;
-  margin-top: 33px;
+  margin-top: 36px;
   padding: 0;
+  width: 290px;
 }
 
 .contacts-list__item {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
   padding: 0;
 }
 
@@ -28,7 +29,8 @@
   color: #d22856;
   font-size: 24px;
   font-weight: lighter;
-  margin: 0 auto;
+  line-height: 29px;
+  margin: 3px auto;
   padding: 0;
   text-align: center;
 }
@@ -55,12 +57,18 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 0;
+    margin-top: 46px;
+    width: 655px;
   }
 
   .contacts-list__item {
-    margin: 23px 32px;
+    margin: 0 38px;
+    margin-bottom: 47px;
     width: 245px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   .contacts-list__address {
@@ -73,8 +81,8 @@
   .contacts-list {
     align-items: flex-start;
     justify-content: space-between;
-    margin-top: 32px;
-    padding: 0 106px;
+    margin-top: 34px;
+    width: 948px;
   }
 
   .contacts-list__item {
