--- a/source/less/blocks/edit-photo.less
+++ b/source/less/blocks/edit-photo.less
@@ -12,7 +12,8 @@
   display: flex;
   justify-content: center;
   list-style: none;
-  margin: 42px 0 0;
+  margin: 0 auto;
+  margin-bottom: 19px;
   padding: 0;
 }
 
@@ -48,12 +49,13 @@
   justify-content: center;
   list-style: none;
   margin: 0;
+  margin-bottom: 18px;
   padding: 0;
 }
 
 .edit-photo__range-item {
   display: none;
-  margin: 16px 0;
+  margin: 0;
   padding: 0;
 
   &--active {
@@ -62,6 +64,7 @@
 }
 
 .edit-photo__range {
+  -webkit-appearance: none;
   width: 240px;
   background: transparent;
 }
@@ -76,6 +79,7 @@
 }
 
 .edit-photo__range::-webkit-slider-thumb {
+  -webkit-appearance: none;
   border: 2px solid #d22856;
   border-radius: 50px;
   background: #f2f2f2;
@@ -136,7 +140,7 @@
     width: 22px;
 
     &:first-child {
-      margin-top: 24px;
+      margin-top: 23px;
     }
   }
 
@@ -161,11 +165,11 @@
   .edit-photo__range-item {
     border-bottom: 1px solid #dddfe0;
     display: block;
-    padding-bottom: 30px;
-    margin: 0 0 19px;
+    padding-bottom: 33px;
+    margin: 0 0 20px;
 
     &:first-child {
-      margin-top: 31px;
+      margin-top: 32px;
     }
   }
 
@@ -175,6 +179,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .edit-photo {
+    margin-bottom: 62px;
+  }
+
   .edit-photo__tool {
     &--contrast {
       height: 32px;
@@ -185,17 +193,17 @@
   .edit-photo__tool-item {
     height: 48px;
     margin: 10px 0 4px;
-    padding: 0 39px 9px 0;
+    padding: 0 43px 9px 0;
     width: 48px;
 
     &:first-child {
-      margin-top: 13px;
+      margin-top: 10px;
     }
   }
 
   .edit-photo__range-item {
-    margin-bottom: 21px;
-    padding-bottom: 28px;
+    margin-bottom: 23px;
+    padding-bottom: 30px;
     padding-right: 30px;
 
     &:first-child {
