--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -57,6 +57,7 @@
   position: absolute;
   right: 0;
   width: 157px;
+  z-index: 3;
 
   &--mobile {
     display: block;
@@ -73,20 +74,26 @@
 
 @media (min-width: @tablet-width) {
   .features {
-    padding: 50px 35px 30px;
+    padding: 74px 0 41px;
   }
 
   .features__list {
-    float: right;
+    margin-left: 310px;
     width: 295px;
   }
 
   .features__item {
-    margin: 11px 0;
+    margin: 0;
+    margin-bottom: 34px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   .features__title {
-    margin: 12px 0;
+    margin: 0;
+    margin-bottom: 12px;
     text-align: left;
     width: 295px;
   }
@@ -97,7 +104,7 @@
   }
 
   .features__pic {
-    bottom: 0;
+    bottom: -42px;
     height: 481px;
     left: 20px;
     margin: 0;
@@ -107,8 +114,7 @@
 
 @media (min-width: @desktop-width) {
   .features {
-    padding: 0;
-    padding-bottom: 30px;
+    padding: 13px 0 8px;
   }
 
   .features__list {
@@ -118,34 +124,39 @@
     justify-content: space-between;
     margin: 0 auto;
     margin-top: -12px;
-    width: 932px;
+    width: 880px;
   }
 
   .features__item {
-    width: 292px;
+    width: 240px;
   }
 
   .features__pic {
     display: block;
     height: 302px;
     margin: 0;
+    margin-bottom: 55px;
     order: 0;
+    padding: 0;
     position: static;
-    width: 292px;
+    width: 290px;
   }
 
   .features__title {
     font-size: 30px;
     line-height: 30px;
-    margin: 55px 0 24px;
-    padding: 0 26px;
+    margin: 0;
+    margin-bottom: 24px;
+    padding: 0;
     text-align: center;
+    width: 230px;
   }
 
   .features__description {
     font-size: 18px;
     line-height: 30px;
-    padding: 0 28px;
+    padding: 0;
     text-align: center;
+    width: 230px;
   }
 }
