--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -10,7 +10,8 @@
 .form-competition__set {
   border: none;
   margin: 0 auto;
-  padding: 20px 0 25px;
+  padding: 0;
+  padding-bottom: 25px;
 
   &--light {
     background-color: #ffffff;
@@ -20,12 +21,17 @@
   &--dark {
     background-color: #f2f2f2;
     color: #283645;
-    padding: 5px 0 45px;
+    padding: 38px 0 45px;
     width: 100%;
   }
 
   &--comment {
+    padding: 40px 0 45px;
     width: 280px;
+  }
+
+  &--adress {
+    padding-top: 35px;
   }
 }
 
@@ -34,35 +40,48 @@
   margin: 0 auto;
   padding: 0;
   width: 280px;
-
-  &--select {
-    margin-top: 110px;
-  }
 }
 
 .form-competition__item {
-  margin: 15px 0;
+  margin: 0;
+  margin-bottom: 18px;
   padding: 0;
 }
 
 .form-competition__select-item {
   font-weight: normal;
-  margin: 52px 0 0;
+  margin: 0;
+  margin-bottom: 52px;
   padding: 0;
 
   &--radio {
-    margin-top: 44px;
+    margin-bottom: 44px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &:last-child {
+    margin-bottom: 0;
   }
 }
 
 .form-competition__text-label {
   color: #d22856;
+  display:inline-block;
   font-size: 14px;
   font-weight: normal;
-  line-height: 30px;
-  margin: 10px 23px;
+  line-height: 20px;
+  margin: 0 23px;
+  margin-bottom: 3px;
   padding: 0;
   text-transform: uppercase;
+}
+
+.form-competition__text-input {
+  margin: 0 auto;
+  padding: 0;
 }
 
 .form-competition__text {
@@ -73,7 +92,7 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 30px;
-  margin: 3px auto;
+  margin: 0 auto;
   padding: 15px 22px;
   width: 232px;
 
@@ -89,8 +108,8 @@
 .form-competition__title {
   color: #d22856;
   display: block;
-  font-size: 14px;
   float: left;
+  font-size: 14px;
   font-weight: normal;
   line-height: 18px;
   margin: 0 auto;
@@ -99,13 +118,19 @@
   text-transform: uppercase;
 
   &--dark {
-    margin: 32px auto;
-    padding: 0 30px;
+    margin-bottom: 41px;
+    width: 100%;
   }
 
   &--adress {
     display: none;
   }
+}
+
+.form-competition__title-wrap {
+  margin: 0 auto;
+  padding: 0;
+  width: 240px;
 }
 
 .form-competition__item-label {
@@ -114,8 +139,9 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 30px;
-  margin: 43px 0;
-  padding: 0 0 0 70px;
+  margin: 0;
+  margin-bottom: 43px;
+  padding-left: 70px;
   position: relative;
 }
 
@@ -177,7 +203,8 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 18px;
-  margin: 18px auto;
+  margin: 0 auto;
+  margin-bottom: 18px;
   padding: 0;
   text-align: center;
   text-transform: uppercase;
@@ -203,8 +230,10 @@
 }
 
 .form-competition__button {
-  margin: 18px auto;
+  margin: 0 auto;
+  margin-bottom: 35px;
   padding: 0;
+  text-align: center;
 }
 
 .form-competition__note {
@@ -212,7 +241,8 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 30px;
-  margin: 16px auto;
+  margin: 0 auto;
+  margin-bottom: 16px;
   padding: 0;
   text-transform: uppercase;
   text-align: center;
@@ -230,41 +260,44 @@
   .form-competition__set {
     border: 2px solid #e5e5e5;
     border-radius: 2px;
+    margin-bottom: 51px;
     padding: 0;
     width: 617px;
-    margin-bottom: 50px;
 
     &--dark {
       background-color: #ffffff;
-      padding: 0 56px 60px;
+      padding: 0;
+      padding-bottom: 60px;
       width: 504px;
     }
 
     &--name {
       border: none;
-      margin-bottom: 0;
+      margin-bottom: 53px;
       order: 0;
     }
 
     &--device {
       order: 1;
+      padding: 42px 56px 62px;
     }
 
     &--adress {
       order: 2;
-      padding: 29px 57px 0;
+      padding: 31px 38px;
       width: 200px;
     }
 
     &--achievements {
       order: 3;
       margin-bottom: 57px;
-      padding: 43px 56px 2px;
+      padding: 42px 56px 52px;
     }
 
     &--comment {
+      margin-bottom: 67px;
       order: 4;
-      padding: 36px 58px 45px;
+      padding: 36px 38px 52px;
       width: 200px;
     }
   }
@@ -290,19 +323,25 @@
       align-items: center;
       flex-direction: row;
       justify-content: space-between;
-      margin: 53px auto;
+      margin: 0 auto;
+      margin-bottom: 53px;
     }
 
     &--adress {
       align-items: flex-start;
       flex-direction: column-reverse;
       justify-content: flex-start;
-      margin-bottom: 17px;
+      margin-bottom: 32px;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 
   .form-competition__text-input {
     margin: 0 auto;
+    margin-bottom: 15px;
     padding: 0;
     position: relative;
 
@@ -346,17 +385,32 @@
     }
 
     &--contacts {
-      padding: 15px 20px;
+      padding: 15px 19px;
       padding-right: 74px;
       position: relative;
-      width: 402px;
+      width: 403px;
       z-index: 3;
     }
   }
 
   .form-competition__text-label {
+    margin: 0 20px;
+
     &--name {
-      margin: 0 21px 0 0;
+      margin: 0;
+      margin-right: 21px;
+    }
+  }
+
+  .form-competition__title-wrap {
+    width: 360px;
+
+    &--achievement {
+      width: 360px;
+    }
+
+    &--device {
+      width: 310px;
     }
   }
 
@@ -369,6 +423,7 @@
 
     &--dark {
       margin: 0 auto;
+      width: auto;
     }
 
     &--adress {
@@ -379,7 +434,7 @@
 
   .form-competition__select-item {
     &--radio {
-      margin-top: 44px;
+      margin-bottom: 44px;
     }
 
     &--achievement {
@@ -389,14 +444,14 @@
   }
 
   .form-competition__item-label {
-    padding-left: 60px;
+    padding-left: 61px;
   }
 
   .form-competition__comment-title {
     float: none;
     padding: 0 38px;
     margin: 0 auto;
-    width: 180px;
+    width: 260px;
   }
 
   .form-competition__comment {
@@ -410,12 +465,13 @@
     display: flex;
     justify-content: space-between;
     order: 5;
-    margin-bottom: 31px;
+    margin-bottom: 48px;
     padding: 0 20px;
+    width: 620px;
   }
 
   .form-competition__button {
-    margin: 18px 0;
+    margin: 0;
   }
 
   .form-competition__note {
@@ -430,35 +486,35 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 0 auto;
-    margin-top: 65px;
     width: 940px;
   }
 
   .form-competition__set {
     &--name {
-      width: 46%;
+      width: 434px;
       margin: 20px 0 0;
     }
 
     &--device {
-      width: 46%;
+      width: 431px;
       margin: 0;
-      padding: 0;
-      padding-bottom: 60px;
+      padding: 45px 0px 60px;
     }
 
     &--adress {
-      padding: 29px 57px 4px;
+      padding: 29px 57px 17px;
       width: 100%;
     }
 
     &--achievements {
-      padding: 43px 57px 47px;
+      margin-bottom: 51px;
+      padding: 43px 57px 49px;
       width: 100%;
     }
 
     &--comment {
-      padding: 27px 58px 37px;
+      margin-bottom: 65px;
+      padding: 29px 58px 43px;
       width: 100%;
     }
   }
@@ -491,7 +547,7 @@
 
   .form-competition__item {
     &--name {
-      margin: 0 auto 54px;
+      margin-bottom: 54px;
 
       &:last-child {
         margin-bottom: 51px;
@@ -504,6 +560,8 @@
   }
 
   .form-competition__text-input {
+    margin-bottom: 17px;
+
     &--phone::after {
       height: 62px;
       width: 62px;
@@ -528,7 +586,7 @@
   }
 
   .form-competition__text-label {
-    margin: 10px 21px;
+    margin: 0 21px;
 
     &--name {
       margin-left: 0;
@@ -544,13 +602,19 @@
 
   .form-competition__select-item {
     &--achievement {
-      margin: 0 63px 11px 0;
+      margin: 0;
+      margin-bottom: 11px;
+
+      &:last-child {
+        margin-bottom: 11px;
+      }
     }
   }
 
   .form-competition__comment-title {
     font-size: 13px;
     line-height: 30px;
+    min-width: 200px;
     padding: 0 17px;
   }
 
@@ -561,8 +625,7 @@
 
   .form-competition__bottom {
     padding: 0;
-    margin-bottom: 0;
-    margin-top: 20px;
+    margin: 0;
     width: 100%;
   }
 
