--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -8,6 +8,12 @@
   position: relative;
   width: 100%;
   z-index: 9;
+
+  &--closed {
+    margin: 0;
+    position: absolute;
+    top: 0;
+  }
 }
 
 .main-nav__logo {
@@ -22,7 +28,9 @@
   margin-top: -25px;
   object-fit: contain;
   fill: #ffffff;
+}
 
+.main-nav__logo[href] .main-nav__logo-image {
   &:hover {
     fill: #d22856;
   }
@@ -128,8 +136,6 @@
 
 .main-nav__list {
   background-color: #283645;
-  display: flex;
-  flex-direction: column;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -148,25 +154,17 @@
   text-decoration: none;
   text-transform: uppercase;
   width: 100%;
-
-  &:hover {
-    color: #d22856;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
 }
 
 .main-nav__link {
   color: #ffffff;
   text-decoration: none;
 
-  &:hover {
+  &[href]:hover {
     color: #d22856;
   }
 
-  &:active {
+  &[href]:active {
     opacity: 0.3;
   }
 }
@@ -231,7 +229,10 @@
   .main-nav {
     background-color: rgba(0, 0, 0, 0.3);
     font-weight: normal;
-    margin-bottom: -110px;
+    margin-bottom: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
   }
 
   .main-nav__wrapper {
@@ -256,6 +257,7 @@
   .main-nav__list {
     background-color: transparent;
     border: none;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     list-style: none;
