--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -27,7 +27,9 @@
 
 .page-footer__logo-image {
   fill: #283645;
+}
 
+.page-footer__logo[href] .page-footer__logo-image {
   &:hover {
     fill: #d22856;
   }
