--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,22 +1,24 @@
 .price {
   background-color: #f2f2f2;
   margin: 0;
-  padding: 90px 0 7px;
+  overflow: hidden;
+  padding: 90px 0 48px;
 }
 
 .price__wrapper {
-  overflow: hidden;
+  margin: 0 auto;
+  width: 320px;
 }
 
 .price__packages {
   list-style: none;
-  margin: 0 0 0 -258px;
+  margin: 0 0 42px -258px;
   padding: 0;
 }
 
 .price__toggles {
   background-color: #f2f2f2;
-  margin: 43px auto;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -24,6 +26,10 @@
   .price {
     padding-bottom: 69px;
     padding-top: 89px;
+  }
+
+  .price__wrapper {
+    width: auto;
   }
 
   .price__packages {
@@ -34,6 +40,6 @@
 @media (min-width: @desktop-width) {
   .price {
     padding-bottom: 95px;
-    padding-top: 143px;
+    padding-top: 146px;
   }
 }
