--- a/source/less/blocks/users-posts.less
+++ b/source/less/blocks/users-posts.less
@@ -2,18 +2,23 @@
   background-color: #ffffff;
   color: #283645;
   list-style: none;
-  margin: 49px auto 40px;
+  margin: 0 auto;
   padding: 0;
 }
 
 .users-posts__item {
-  margin: 20px auto;
+  margin: 0 auto;
+  margin-bottom: 20px;
   padding: 0;
   width: 280px;
 
   &--pano {
     position: relative;
     width: 100%;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
   }
 }
 
@@ -55,6 +60,10 @@
   margin: 0 auto;
   padding: 17px 18px 20px;
   width: 244px;
+
+  &--pano {
+    padding: 17px 18px 20px;
+  }
 }
 
 .users-posts__head {
@@ -62,6 +71,7 @@
   display: flex;
   justify-content: flex-start;
   margin: 0;
+  margin-bottom: 1px;
   padding: 0;
 }
 
@@ -87,7 +97,8 @@
   font-size: 14px;
   font-weight: normal;
   line-height: 24px;
-  margin: 1px 0;
+  margin: 0;
+  margin-bottom: 1px;
   padding: 0;
 }
 
@@ -129,16 +140,20 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 76px;
   }
 
   .users-posts__item {
-    margin: 10px;
+    margin: 0 10px;
+    margin-bottom: 20px;
     width: 300px;
 
     &--pano {
       width: 100%;
-      margin: 0 0 38px;
+      margin: 0 0 48px;
+    }
+
+    &:last-child {
+      margin-bottom: 20px;
     }
   }
 
@@ -204,15 +219,15 @@
 }
 
 @media (min-width: @desktop-width) {
-  .users-posts {
-    margin-bottom: 0;
-  }
-
   .users-posts__item {
-    margin-bottom: 43px;
+    margin-bottom: 54px;
 
     &--pano {
-      margin-bottom: 38px;
+      margin-bottom: 48px;
+    }
+
+    &:last-child {
+      margin-bottom: 54px;
     }
   }
 
