--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,9 @@
 @import "fonts.less";
 @import "global.less";
 @import "blocks/visually-hidden.less";
+@import "blocks/wrap.less";
+@import "blocks/annotation.less";
+@import "blocks/container.less";
 @import "blocks/slider.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
