--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -5,7 +5,7 @@
   position: relative;
 
   &::after {
-    background-image: url(../img/bg-triangle-white-footer.svg);
+    background-image: url("../img/bg-triangle-white-footer.svg");
     background-size: contain;
     background-repeat: no-repeat;
     bottom: -40px;
