--- a/source/less/blocks/edit-photo.less
+++ b/source/less/blocks/edit-photo.less
@@ -64,7 +64,7 @@
 }
 
 .edit-photo__range {
-  -webkit-appearance: none;
+  appearance: none;
   width: 240px;
   background: transparent;
 }
@@ -79,7 +79,7 @@
 }
 
 .edit-photo__range::-webkit-slider-thumb {
-  -webkit-appearance: none;
+  appearance: none;
   border: 2px solid #d22856;
   border-radius: 50px;
   background: #f2f2f2;
