--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -10,7 +10,7 @@
   position: relative;
 
   &::after {
-    background-image: url(../img/bg-triangle-white.svg);
+    background-image: url("../img/bg-triangle-white.svg");
     background-size: contain;
     background-repeat: no-repeat;
     bottom: -39px;
