--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -69,7 +69,7 @@
 
 .form-competition__text-label {
   color: #d22856;
-  display:inline-block;
+  display: inline-block;
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
@@ -498,7 +498,7 @@
     &--device {
       width: 431px;
       margin: 0;
-      padding: 45px 0px 60px;
+      padding: 45px 0 60px;
     }
 
     &--adress {
