правки страницы форма для ie

--- a/source/less/blocks/form-competition.less
+++ b/source/less/blocks/form-competition.less
@@ -284,8 +284,8 @@
 
     &--adress {
       order: 2;
-      padding: 31px 38px;
-      width: 200px;
+      padding: 31px 33px;
+      width: 549px;
     }
 
     &--achievements {
@@ -298,7 +298,7 @@
       margin-bottom: 67px;
       order: 4;
       padding: 36px 38px 52px;
-      width: 200px;
+      width: 541px;
     }
   }
 
@@ -377,6 +377,7 @@
   }
 
   .form-competition__text {
+    height: 29px;
     margin: 0;
 
     &--name {
@@ -579,9 +580,10 @@
     }
 
     &--contacts {
-      width: 284px;
+      height: 30px;
       padding: 14px 20px;
       padding-right: 67px;
+      width: 284px;
     }
   }
 
