правки главной для ie

--- a/source/less/blocks/packages.less
+++ b/source/less/blocks/packages.less
@@ -156,19 +156,17 @@
     width: auto;
 
     &--true::after {
-      bottom: 0;
       left: 0;
       margin: auto;
       right: 0;
-      top: 0;
+      top: 11px;
     }
 
     &--false::after {
-      bottom: 0;
       left: 0;
       margin: auto;
       right: 0;
-      top: 0;
+      top: 8px;
     }
   }
 
@@ -214,7 +212,11 @@
 
   .packages__include {
     &--true::after {
-      top: 7px;
+      top: 18px;
+    }
+
+    &--false::after {
+      top: 8px;
     }
   }
 
