--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -44,6 +44,7 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
+  width: 265px;
 }
 
 .features__pic {
@@ -101,6 +102,7 @@
   .features__description {
     line-height: 24px;
     text-align: left;
+    width: 296px;
   }
 
   .features__pic {
